--- a/client/src/components/common/dialog/dialog.css
+++ b/client/src/components/common/dialog/dialog.css
@@ -6,13 +6,13 @@
     width: 100%;
     height: 100%;
     z-index: 1090;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 .dialog{
-    position:absolute;
-    top: 0;
+    /* position:absolute;
+    top: 0; */
     display: flex;
     flex-direction: column;
     margin: 0.5rem;
