--- a/client/src/components/layout/breadcrumb/breadcrumb.css
+++ b/client/src/components/layout/breadcrumb/breadcrumb.css
@@ -4,8 +4,6 @@
     width: 100%;
     height: 3rem;
     z-index: 777;
-     
-
 }
 .breadcrumb-item{
     display: flex;
@@ -15,13 +13,12 @@
 .breadcrumb-item a{
     padding:0.2rem;
     overflow: hidden;
+    color:blue;
     font-weight: 600;
     font-size: 1.2rem;
     text-decoration:underline;
     text-transform: capitalize;
 }
 .breadcrumb-item >  .active{
-
    background-color: transparent!important;
- 
 }
