--- a/client/src/assets/styles/common/_variables.scss
+++ b/client/src/assets/styles/common/_variables.scss
@@ -4,6 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Heebo&family=Montserrat&family=Outfit:wght@300&family=Roboto+Condensed:wght@400;700&family=Ubuntu&display=swap');
 
 :root {
+    --bg: #6f42c1;
+    --primary: #fafafa;
+    --secondary: #f9690e;
     --bg-color: #fff;
     --dialog:var(--bg-color);
     --hover:#ebe6e6;
