--- a/client/src/assets/styles/common/_styles.scss
+++ b/client/src/assets/styles/common/_styles.scss
@@ -2,6 +2,11 @@
 .d-flex{
     display: flex;
 }
+.d-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .d-none{
     display: none !important;
 }
@@ -26,6 +31,17 @@
 }
 .col-15 {
     width: calc(16.66% - 1rem) ;
+}
+.row-25{
+    height: 30%;
+}
+
+.row-50{
+    height: 60%;
+}
+
+.row-100{
+    height:100%;
 }
 @media screen and (max-width: 768px) {
     .col-100,.col-75,.col-50,.col-33,.col-25,.col-15 {
