--- a/client/src/assets/styles/common/_typography.scss
+++ b/client/src/assets/styles/common/_typography.scss
@@ -5,11 +5,13 @@ body {
     font-size: 16px;
     line-height: 1.5;
     overflow: hidden;
+    transition: all 1s ease;
   }
 
 input{
   background-color: var(--bg-color);
   color: var(--color);
+  transition: background-color 0.5s ease;
   }
   
 input:focus{
