--- a/client/src/components/layout/actionbar/actionbar.scss
+++ b/client/src/components/layout/actionbar/actionbar.scss
@@ -39,11 +39,23 @@
 
 
 @media screen and (max-width: 768px) {
+    
     .action-bar{    
         border-top: 1px solid  var(--border);
         min-height: 4rem;
         justify-content: flex-start;
     }
+    .bar-button{
+        display: none!important;
+       
+    }
+    .trasition-bar{
+        transition:  2s ease-in-out;
+    }
+    .d-flex{
+        display: flex!important;
+    }
+
     .bar ul{
         flex-direction: column;
         justify-content: flex-start;
@@ -55,6 +67,7 @@
         border-radius: 0px 0px 15px 15px;
         border: 1px solid var(--border);
         background-color: var(--dialog);
+        
     }
     .bar ul li{
         min-width: 10rem;
@@ -65,8 +78,36 @@
         border-left: 0px;
         border-right: 0px;
         border-bottom:1px solid var(--border);
+        
     }
     .bar ul li i{
         padding: 10px;
     }
+
+    .menu-collaps{
+        cursor: pointer;
+        position: absolute;
+        right: 1.5rem;
+        font-size: large;
+        min-width: 10rem;
+        min-height: 2rem;
+        line-height: 2.5rem;
+        margin:-1em;
+        border-radius: 20px 20px 0px 20px;
+        text-align: center;
+        border: 1px solid var(--border);
+        box-shadow: 0px 4px 5px 0px  rgba(0, 0 , 0, 0.1);
+        display: flex !important;;
+        justify-content: flex-start;
+        align-items: center;
+        transition:display .35s ease-in;
+    
+    }
+    .menu-collaps i{
+        padding:0.5rem;
+    }
+    .menu-collaps span{
+        font-weight: 500;
+    }
 }
+.menu-collaps{display: none;}
