--- a/client/src/assets/styles/common/_styles.scss
+++ b/client/src/assets/styles/common/_styles.scss
@@ -65,6 +65,18 @@
     }
 
     }
+    @media screen and (min-width: 769px) and (max-width: 1366px) {
+    .col-33 {
+        width: calc(100% - 1rem);
+    }
+    .col-25 {
+        width: calc(50% - 1rem);
+    }
+    .col-15{
+        width: calc(50% - 1rem);
+    }
+
+    }
     
 // @media screen and (min-width: 768px) and (max-width: 1024px) {
 //     .col-33,.col-25,.col-15 {
