--- a/client/src/components/common/dialog/dialog.css
+++ b/client/src/components/common/dialog/dialog.css
@@ -41,7 +41,7 @@
     height: 4rem;
     border-top: 0.1rem solid var(--border);
     display: flex;
-    justify-content:end;
+    justify-content:flex-end;
     align-items: center;
     padding: 0.5rem;
     width: 100%;
