--- a/client/src/components/layout/header/header.css
+++ b/client/src/components/layout/header/header.css
@@ -16,7 +16,7 @@
     font-size: 1.2rem;
     width: 10%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 20px;
 }   
 .bars{
@@ -35,7 +35,7 @@ background-color: var(--hover);
 #end{
     width: 20%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin:20px;   
 }
 .popup-menu{
