--- a/client/src/assets/styles/common/_reset.css
+++ b/client/src/assets/styles/common/_reset.css
@@ -16,7 +16,9 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
 }
-
+body > *{
+letter-spacing: 2px!important;
+}
 /* Remove list styles */
 ol, ul {
   list-style: none;
@@ -29,7 +31,14 @@ margin: 0;
 padding: 0;
  
 }
+input:focus, input.form-control:focus {
 
+  outline:none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+}
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
