--- a/client/src/assets/styles/common/_typography.scss
+++ b/client/src/assets/styles/common/_typography.scss
@@ -15,8 +15,8 @@ input{
   }
   
 input:focus{
-  background-color: var(--input-focus);
-  color: var( --input-focus-color);
+  background-color: var(--input-focus)!important;
+  color: var( --input-focus-color)!important;
 }
 span{
   cursor: pointer;
