--- a/client/src/components/common/select-field/selectfields.css
+++ b/client/src/components/common/select-field/selectfields.css
@@ -1,3 +1,45 @@
+
+/* React-Select component css changes  ::Start*/
+.css-b62m3t-container{
+   width: 100%;
+   
+}
+
+.css-13cymwt-control{
+   border-radius:2rem!important;  
+   border-width: 0px!important;
+   background-color: var(--bg-color)!important;
+   color: var(--color)!important;
+}
+.css-1nmdiq5-menu{
+   background-color: var(--fields)!important;
+   color: var(--color)!important;
+}
+
+.css-1nmdiq5-menu > * :hover{
+   background-color: var(--bg-color)!important; 
+ }
+.css-1jqq78o-placeholder{
+   color: var( --input-focus-color)!important;
+}
+.css-1dimb5e-singleValue{
+   color: var( --input-focus-color)!important;
+}
+.css-166bipr-Input{
+ 
+   color: var( --input-focus-color)!important;
+}
+.css-t3ipsp-control{
+   outline: none!important;
+   border: none!important;
+   border-radius:2rem!important;  
+   box-shadow: 0 0 0 1px #f1f1f1!important;
+   background-color: var(--input-focus)!important;
+   color: var( --input-focus-color)!important;
+}
+ 
+/* React-Select component css changes  ::End*/
+
 .group-select{
    display: flex;
    align-items: center;
@@ -6,7 +48,7 @@
    margin: 0.5rem;
    border: 1px solid var(--border);
    border-radius: 2rem;
-   max-height: 2.2rem;
+   max-height: auto;
    border: border-box;
    max-width: 100%;
 }
@@ -38,13 +80,23 @@
     background-color: transparent;  
     max-height: 5.2rem;
     border: border-box;
+    align-items: flex-start;
  }
+ .css-13cymwt-control{
+   border-radius:2rem!important;  
+   border-width: 1px!important;
+}
+.css-t3ipsp-control{ 
+   border-radius:2rem!important;  
+   box-shadow: 0 0 0 1px #f1f1f1!important;
+}
+
  .group-select-labal{
     display: block;
     padding: 0.5rem;
     font-size: .75em;
     text-align: start;
-    max-width: 9rem;
+    max-width: 100%;
     
     width: 9rem;
     white-space: nowrap;
