--- a/client/src/components/common/text-field/textfields.css
+++ b/client/src/components/common/text-field/textfields.css
@@ -31,7 +31,7 @@
     border: 1px solid transparent;
     padding: 0.5rem;
     flex-direction: column;
-    border-radius: 0px;
+    /* border-radius: 0px; */
     background-color: transparent;
     max-height: 5.2rem;  
  }
