--- a/client/src/assets/styles/common/_styles.scss
+++ b/client/src/assets/styles/common/_styles.scss
@@ -43,6 +43,28 @@
 .row-100{
     height:100%;
 }
+
+// Divider of fields
+.divider{
+    border-bottom: 2px solid #eee;
+}
+// Error Style
+.border-danger{
+    border: 1px solid #dee2e6 !important;
+    border-color: #dc3545 !important;
+    border-radius: 2rem;
+}
+.required-msg-shake {
+    animation: shaking 0.3s ease-out;
+  }
+  @keyframes shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
+   }
+
 @media screen and (max-width: 768px) {
     .col-100,.col-75,.col-50,.col-33,.col-25,.col-15 {
         width: calc(100% - 1rem);
@@ -77,7 +99,12 @@
     }
 
     }
-    
+    .required::before{
+        content: '*';
+        color: red;
+        font-weight: 900;
+            font-size: 1rem;
+    }
 // @media screen and (min-width: 768px) and (max-width: 1024px) {
 //     .col-33,.col-25,.col-15 {
 //         width: calc(50% - 1rem);
