--- a/client/src/assets/styles/common/_typography.scss
+++ b/client/src/assets/styles/common/_typography.scss
@@ -3,11 +3,11 @@
 body {
     font-family: var(--font-body-font-family);
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 1rem;
     overflow: hidden;
     transition: all 1s ease;
   }
-
+ 
 input{
   background-color: var(--bg-color);
   color: var(--color);
