--- a/client/src/components/common/dataTable/grid.css
+++ b/client/src/components/common/dataTable/grid.css
@@ -39,8 +39,8 @@ border-radius: 50px;
   color: #212529; }
   .table th,
   .table td {
-    padding: 0.75rem;
-    vertical-align: top;
+    padding: 0.85rem;
+    /* vertical-align: top; */
     border-top: 1px solid #dee2e6; }
   .table thead th {
     vertical-align: bottom;
@@ -51,7 +51,9 @@ border-radius: 50px;
 .table-sm th,
 .table-sm td {
   padding: 0.3rem; }
-
+  table.dataTable th.dt-type-numeric, table.dataTable th.dt-type-date, table.dataTable td.dt-type-numeric, table.dataTable td.dt-type-date {
+    text-align: left!important;
+}
 .table-bordered {
   border: 1px solid #dee2e6; }
   .table-bordered th,
@@ -86,7 +88,7 @@ border-radius: 50px;
   border-color: #7abaff; }
 
 .table-hover .table-primary:hover {
-  background-color: #9fcdff; }
+  background-color: #50555b; }
   .table-hover .table-primary:hover > td,
   .table-hover .table-primary:hover > th {
     background-color: #9fcdff; }
@@ -305,3 +307,35 @@ border-radius: 50px;
   -webkit-overflow-scrolling: touch; }
   .table-responsive > .table-bordered {
     border: 0; }
+
+.dataTables_wrapper .dataTables_filter {
+float: left;
+margin-top: 1px;
+text-align: left;
+padding-top: 5px;
+border-radius: 0px 0px 00px 0px;
+border: 1px solid #a49595;
+text-decoration: none;
+width: 100%;
+}
+.dt-buttons {
+    position: relative;
+    float: right;
+}
+.dataTables_wrapper .dataTables_filter input{
+color:inherit;
+border-radius: 50px;
+}
+
+.odd{
+    cursor: pointer;
+   
+}
+.even{
+    cursor: pointer;
+  
+}
+.link-primary{
+    color:#0d6efd;
+    text-decoration:underline;
+}
