--- a/client/src/components/layout/actionbar/actionbar.scss
+++ b/client/src/components/layout/actionbar/actionbar.scss
@@ -36,7 +36,20 @@
     cursor:pointer;
 }
 
+.p-1{
+    // padding: 0.6rem;
+}
+._count{
+    margin-top: -0.5rem;
+    margin-left: -2.2rem;
+    background: #007bff !important;
+    position: absolute;
+    color: white;
+    width: 35px;
+    height: 35px;
+    border-radius: 100% 100% 0%;
 
+}
 
 @media screen and (max-width: 768px) {
     
